2005-10-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Franck has ramake 2 backgrounds. one for color and one for leftright.
	Still need to review the way we highlight the button uppon click in the
	leftright game.

	Fixed string issues (Thanks Ronny)

	* INSTALL:
	* boards/chronos.xml.in:
	* boards/colors/colors_bg.jpg:
	* boards/colors/colors_bg.png:
	* boards/leftright/leftright-bg.jpg:
	* boards/skins/babytoy/leftright-bg.jpg:
	* boards/skins/gartoon/leftright-bg.jpg:
	* configure.in:
	* src/boards/colors.c: (start_board):
	* src/boards/leftright.c: (start_board):
	* src/boards/python/guessnumber.py:


	*** CREATED THE gcompris_7_1 branch   ***
	*** configure.in now refer to 7.2PRE1 ***

2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

	- Completed the guessnumber activity, including artwork
	
	* boards/images/cave.png:
	* src/boards/boaricons/guessnumber.png:
	* src/boards/python/guessnumber.py:

2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed non translated string in chronos.
	  (strings in xml with preverve must not use \n)
	- Added a new icon for the gnumch game by Franck Doucet.
	- Removed keymap association that are not more needed in python
	  boards
	- Now the guessnumber game as an helico that shows the distance
	  to the number to find
	
	* boards/boardicons/connect4.png:
	* boards/boardicons/gnumch-equal.png:
	* boards/boardicons/gnumch-factors.png:
	* boards/boardicons/gnumch-inequal.png:
	* boards/boardicons/gnumch-multiples.png:
	* boards/boardicons/gnumch-primes.png:
	* boards/boardicons/gnumch.png:
	* boards/boardicons/sudoku.png:
	* boards/chronos/board3_0.xml.in:
	* boards/chronos/board3_1.xml.in:
	* boards/chronos/board3_2.xml.in:
	* boards/chronos/board3_3.xml.in:
	* boards/chronos/board4_0.xml.in:
	* boards/chronos/board4_3.xml.in:
	* boards/gnumch-equality.xml.in:
	* boards/gnumch-factors.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/gnumch-multiples.xml.in:
	* boards/gnumch-primes.xml.in: