@@ -1,3 +1,12 @@
+2005-10-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Completed leftright remake, integrated new highlight
+	selector by Franck.
+
+	* boards/leftright/highlight_torus.png:
+	* boards/leftright/leftright-select.png:
+	* src/boards/leftright.c: (leftright_create_item):
+
 2005-10-20  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Franck has ramake 2 backgrounds. one for color and one for leftright.
